<resources>
    <string name="app_name">PhotoBlog</string>
    <string name="login">kkak</string>
    <string name="tv1">kkk</string>
    <string name="welcome_to">Welcome to</string>
    <string name="photoblog">PhotoBlog</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login_to_account">Login To Account</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="create_a_new_account">new accpunt</string>
    <string name="new_account_text">Create a new Account</string>
    <string name="res_account">Create an Account</string>
    <string name="already_account_text">Already have an Account</string>
    <string name="confirm_pass_text">Confirm Pass</string>
    <string name="confirm_pass" />
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_hint">Your Name</string>
    <string name="setup_btn_text">Save Account Settings</string>
    <string name="save_account">Save Account</string>
    <string name="post_doc">Add Description</string>
    <string name="post_btn_hint">Post Blog</string>
    <string name="post_doc_hint">Add Description...</string>
    <string name="post_btn_text">Add To Post Blog</string>
    <string name="new_post_doc_text">Add To Photo Blog</string>
    <string name="add_to_photo_blog">Add To Photo Blog</string>
    <string name="botton_home_text">Home</string>
    <string name="bottom_noti_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_text">Here the first post of my life ...,i really felling happy</string>
</resources>
