<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.palannath.photoblog.RegisterActivity">

    <ProgressBar
        android:id="@+id/reg_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/reg_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/tv1"
        android:text="@string/new_account_text"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/reg_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/photoblog"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/reg_ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_ed2"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/reg_ed2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_ed3"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/reg_ed3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_bt1"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="107dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        tools:text="@string/confirm_pass" />

    <Button
        android:id="@+id/reg_bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_bt2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:background="@color/colorAccent"
        android:text="@string/res_account"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="17sp" />

    <Button
        android:id="@+id/reg_bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26sp"
        android:padding="17dp"
        android:text="@string/already_account_text"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />




</RelativeLayout>
