<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.palannath.photoblog.LoginActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/tv1"
        android:text="@string/welcome_to"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/photoblog"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ed2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:textColor="@android:color/primary_text_dark"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textColor="@android:color/primary_text_dark"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed2"
        android:layout_marginTop="39dp"
        android:background="@color/colorAccent"
        android:text="@string/login_to_account"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="17sp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26sp"
        android:padding="17dp"
        android:text="@string/need_a_new_account"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="17sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>
