<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.palannath.photoblog.SetupActivity">

    <ProgressBar
        android:id="@+id/setup_progress"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        tools:visibility="invisible" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="218dp"
        android:hint="@string/setup_hint"
        android:inputType=""
        android:padding="15dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="145dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/save_account"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="18sp"
        tools:text="@string/setup_btn_text" />

</RelativeLayout>
